<resources>
    <string name="app_name">Hercules sports nutrition shop</string>
    <string name="authorization">Авторизация</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Войти</string>
    <string name="login_hint">Введите email</string>
    <string name="password_hint">Введите пароль</string>
    <string name="repeat_password_hint">Повторите пароль</string>
    <string name="login_signup_hint">email</string>
    <string name="password_signup_hint">Придумайте пароль</string>
    <string name="sign_up_button">Зарегистрироваться</string>
    <string name="password_repeat_hint">Повторите пароль</string>
    <string name="search">Поиск</string>
    <string name="error_msg_empty">Поле не заполнено</string>
    <string name="error_msg_passwords_mismatch">Пароли не совпадают</string>
    <string name="error_msg_sign_up">Поле заполнено неверно</string>
    <string name="error_msg_sign_in">Минимальная длина пароля - 6 символов</string>
    <string name="error_msg_address">Адрес доставки введен некорректно</string>
    <string name="success">Вы успешно зарегистрировались. Ваш id: </string>
    <string name="back">Назад</string>
    <string name="wait">Пожалуйста, подождите&#8230;</string>
    <string name="text_forgot_password">Забыли пароль?</string>
    <string name="text_forgot_password_caps">ЗАБЫЛИ ПАРОЛЬ?</string>
    <string name="enter_login">Введите email, на который будет отправлено письмо для восстановления пароля</string>
    <string name="email_hint">Введите email</string>
    <string name="send">отправить</string>
    <string name="email_sent_success">На указанный email отправлено письмо для восстановления пароля</string>
    <string name="error">Произошла ошибка</string>
    <string name="app_bar_text">Каталог</string>
    <string name="update">обновить</string>
    <string name="error_catalog">Произошла непредвиденная ошибка</string>
    <string name="empty_catalog">Товары не были обнаружены</string>
    <string name="empty_catalog_hint">Попробуйте обновить, вдруг товары появились</string>
    <string name="error_catalog_hint">Детальный текст ошибки, занимающий\nнесколько строк</string>
    <string name="price">9 000 ₽</string>
    <string name="buy">купить</string>
    <string name="category">Категория</string>
    <string name="title">Протеин Optimum Nutrition 100% Whey Gold Standard, 2350 г</string>
    <string name="categories">Категории</string>
    <string name="muscle">Для набора мышечной массы</string>
    <string name="weightLoss">Для снижения веса</string>
    <string name="immunity">Для укрепления иммунитета</string>
    <string name="version">Приложение 1.0.0 (117)</string>
    <string name="occupation">Род деятельности</string>
    <string name="profile_fio">Имя Фамилия</string>
    <string name="my_orders">Мои заказы</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выйти</string>
    <string name="cancel">Отмена</string>
    <string name="profile">Профиль</string>
    <string name="dialog_message">Вы действительно хотите выйти?</string>
    <string name="shop">Магазин</string>
    <string name="video">О продукции</string>
    <string name="quantity">1</string>
    <string name="buy_9000">Купить за 9 000 ₽</string>
    <string name="order">Оформление заказа</string>
    <string name="circle"> • </string>
    <string name="house">Дом</string>
    <string name="apartment">Квартира</string>
    <string name="date">Дата доставки</string>
    <string name="pick_date">выбор даты</string>
    <string name="buy_for">Купить за</string>
    <string name="rub">₽</string>
    <string name="order_type"> (Самовывоз)</string>
    <string name="addressUser">Адрес доставки</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_text">Выбрать пункт выдачи</string>
    <string name="all">Все</string>
    <string name="active">Активные</string>
    <string name="orders_error">В данный момент невозможно совершать заказы</string>
    <string name="go_to_catalog">В каталог</string>
    <string name="empty_message_orders">Заказов не обнаружено</string>
    <string name="empty_hint_orders">Закажите что-нибудь и заказы появятся тут</string>
    <string name="orders_error_hint">Методы GET и POST в работе</string>
    <string name="orders">Ваши заказы </string>
    <string name="order_success">Заказ оформлен</string>
    <string name="order_error">Не все поля были заполнены</string>
    <string name="order_delete">Заказ отменен</string>
    <string name="dialog_message_order">Вы действительно хотите отменить заказ №</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="goToShop">Перейти к покупкам</string>
    <string name="name">Имя пользователя</string>
    <string name="nickname">Имя пользователя (никнейм)</string>
    <string name="last_name">фамилия</string>
    <string name="occupation_hint">Род деятельности</string>
    <string name="change">Изменить</string>
    <string name="dev">Разработчик</string>
    <string name="tester">Тестировщик</string>
    <string name="manager">Менеджер</string>
    <string name="other">Другое</string>
    <string name="settings_error">Во время изменения профиля произошла ошибка</string>
    <string name="settings_success"> Профиль был успешно изменен</string>
    <string name="occupation_hint_other">Другой род деятельности</string>
    <string name="takePhoto">Сделать снимок</string>
    <string name="takeFromGallery">Выбрать из галереи</string>
    <string name="permission_continue">Продолжить</string>
    <string name="camera">Приложению требуется доступ к камере, чтобы сделать снимок. Предоставить приложению доступ к камере?</string>
    <string name="gallery">Приложению требуется доступ к файлам, чтобы выбрать фото из галереи. Предоставить приложению доступ к файлам?</string>
    <string name="badge_text">Хит сезона</string>
    <string name="product_error">Произошла непредвиденная ошибка</string>
    <string name="title2">Протеин Optimum Nutrition 100% Whey Gold Standard, 2350 г</string>
    <string name="description">Optimum Nutrition 100% Whey Gold Standard содержит микрофильтрованный изолят
        и ультрафильтрованный концентрат сывороточного протеина, а также гидролизованные пептиды сыворотки.
        Изолят сывороточного протеина быстро усваивается организмом и снабжает его аминокислотами
        с разветвлёнными боковыми цепочками, которые защищают мышцы от разрушительных процессов катаболизма
        и способствуют более быстрому и качественному восстановлению организма после тяжёлых нагрузок,
        что делает процесс наращивая мышц более эффективным. Гидролизованные пептиды сыворотки позволяют
        мышцам быстрее получать аминокислоты.
        Optimum Nutrition 100% Whey Gold Standard быстро смешивается с жидкостью, растворяясь без остатка,
        и обеспечивает порцией чистого протеина без лишних жиров, холестерина и калорий,
        а малое содержание лактозы делает этот продукт безопасным.</string>
    <string name="type">Вкус/тип</string>
    <string name="buy_now">Купить сейчас</string>
    <string name="default_type">Вкус</string>
    <string name="tools_title">Title</string>
    <string name="refresh">Обновить</string>
    <string name="titleChoiceTrain">Эффективные упражнения для новичков</string>
    <string name="titleChoiceMan">Программы тренировок для мужчин</string>
    <string name="titleChoiceWoman">Программы тренировок для девушек</string>
    <string name="promptChoiceTrain">Просто укажите ваш пол и перейдите к выбору тренировок</string>
    <string name="woman">Женский</string>
    <string name="man">Мужской</string>
    <string name="timer">Установить таймер</string>
    <string name="timerBase">30 секунд</string>
    <string name="nextTrain">Далее</string>
    <string name="timerTitle">Засекайте время выполнения комплекса упражнений и отдыха</string>
    <string name="timerMessage">Время вышло !</string>
    <string name="timerSet">Установить время</string>
    <string name="SongSet">Выбрать музыкальную тему</string>
    <string name="timerType">Тип таймера</string>
    <string name="timerTabata">Интервальный таймер Табата</string>
    <string name="timerStandart">Стандартный таймер</string>
    <string name="Raund">Раунд</string>
    <string name="Ready">Подготовка</string>
    <string name="Rest">Отдых</string>
    <string name="End">Конец тренировки</string>
    <string name="video_training">Тренировки</string>
    <string name="me">Мое местоположение</string>
    <string name="addressHouse">addressHouse</string>
    <string name="map_text_house">Выбрать адрес</string>
    <string name="town_street_house">Адрес доставки</string>
    <string name="melody1">Мелодия №1</string>
    <string name="melody2">Мелодия №2</string>
    <string name="melody3">Мелодия №3</string>
    <string name="selectTrain">К программам тренировок</string>
    <string name="dialog_message_exit">Выйти из приложения?</string>
    <string name="tabata">Табата — это система коротких интервальных тренировок с высокой интенсивностью нагрузки, разработанная японским профессором, доктором Идзуми Табата  и тренером японской конькобежной сборной Ирисавой Коичи.

\n\nОсновная формула тренировки по системе Табата — 20 секунд работы, 10 секунд отдыха, цикл повторяется 8 раз (тренировка занимает 4 минуты).

\n\nСогласно исследованиям, тренировки по протоколу Табата являются одним из лучших методов для быстрого сжигания жира, существенно превосходя по эффективности обычные кардиотренировки. Кроме этого, тренинг Табата можно выполнять с обычными упражнениями с весом тела — и в любых условиях.

\n\nЗа такие короткие промежутки времени организм возобновляет работу, не успев толком восстановиться после предыдущей нагрузки. Чтобы выжать из данной методики максимум, необходимо серьёзно относиться к этим 20 секундам физической активности, а ключ к успеху лежит в выполнении максимального количества подходов.

\n\nТабата не является строгим набором упражнений, это формула, по которой ваша тренировка должна строиться. То есть, вы можете выбирать любое упражнение и выполнять его по схеме Табаты.

\n\nХотите отжиматься? Пожалуйста! Прес, берпи, приседания, махи гирей? Не проблема. Можно выбрать несколько упражнений. Между 4-минутными тренировками можно отдохнуть в течение нескольких минут, после чего возвращаться к занятиям с новыми силами. Начинающим будет достаточно 1-2 сета по 4 минуты.
\n\nНиже приведены примеры упражнений, которые вы можете включить в свою тренировку.\n\n</string>
</resources>